zta/microservice7/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zta-microservice7
spec:
  selector:
    app: zta-microservice7
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8087
  type: ClusterIP
